# FastAPI_games

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  start.sh
alembic/: env.py
alembic/versions/: 2025_02_08_2020-837907086e95_create_user_and_game.py  2025_02_08_2021-ad47d1222ab8_create_cover.py  2025_02_12_1807-9f169f38d790_columns_changes.py  2025_02_14_1808-71c7951a10ee_create_user_and_game.py  2025_02_22_1809-986587ba298c_initial.py  2025_02_24_1630-7460f8e2e61c_game_change.py  2025_03_04_1741-c4acf1d0a0ae_.py
src/: config.py  database.py  models.py
src/api_v1/: __init__.py  security.py  utils.py
src/api_v1/auth/: active_sessions.py  cookie_login.py  deps.py
src/api_v1/game/: __init__.py  cruds.py  views.py
src/api_v1/user/: __init__.py  cruds.py  views.py
src/models/: __init__.py  cover.py  game.py  user.py
src/scripts/: start.sh
src/templates/: home.html
src/templates/static/: style.css
tests/test_cruds/: test_user.py
